# ChangeLog for dev-games/ggz-client-libs
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/ggz-client-libs/ChangeLog,v 1.33 2009/04/28 11:54:45 armin76 Exp $

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  arm/sh stable

  20 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Add ~sh

  05 Apr 2009; Peter Alfredsen <loki_val@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Fix keyword mixup.

  05 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Add ~arm

  01 Feb 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +files/ggz-client-libs-0.0.14.1-destdir.patch,
  ggz-client-libs-0.0.14.1.ebuild:
  add patch from Michael Edenfield to apply the DESTDIR string correctly (bug
  #237607)

  13 Nov 2008; Brent Baude <ranger@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Marking ggz-client-libs-0.0.14.1 ppc64 stable for bug 236971

  28 Oct 2008; Brent Baude <ranger@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Marking ggz-client-libs-0.0.14.1 ~ppc64 for gnome

  25 Sep 2008; Jeroen Roovers <jer@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Stable for HPPA (bug #236971).

  10 Sep 2008; Jeroen Roovers <jer@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  Marked ~hppa too.

  15 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  alpha/ia64/sparc/x86 stable wrt #226019

  14 Jun 2008; nixnut <nixnut@gentoo.org> ggz-client-libs-0.0.14.1.ebuild:
  Stable on ppc wrt bug 226019

  05 May 2008; Raúl Porcel <armin76@gentoo.org> ChangeLog:
  Add ~alpha/~ia64 wrt #218794

  26 Mar 2008; Samuli Suominen <drac@gentoo.org>
  ggz-client-libs-0.0.14.1.ebuild:
  amd64 stable wrt #214349

*ggz-client-libs-0.0.14.1 (18 Feb 2008)

  18 Feb 2008; Tristan Heaven <nyhm@gentoo.org>
  +ggz-client-libs-0.0.14.1.ebuild:
  Version bump
