@@ -1,6 +1,9 @@
 # ChangeLog for dev-games/libggz
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/libggz/ChangeLog,v 1.30 2009/04/28 11:55:31 armin76 Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/libggz/ChangeLog,v 1.31 2010/01/22 22:10:44 abcd Exp $
+
+  22 Jan 2010; Jonathan Callen <abcd@gentoo.org> libggz-0.0.14.1.ebuild:
+  Keyword ~amd64-linux/~x86-linux
 
   28 Apr 2009; Raúl Porcel <armin76@gentoo.org> libggz-0.0.14.1.ebuild:
   arm/sh stable
