@@ -1,6 +1,10 @@
 # ChangeLog for dev-games/ggz-client-libs
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/ggz-client-libs/ChangeLog,v 1.33 2009/04/28 11:54:45 armin76 Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-games/cvs-repo/gentoo-x86/dev-games/ggz-client-libs/ChangeLog,v 1.34 2010/01/22 22:11:22 abcd Exp $
+
+  22 Jan 2010; Jonathan Callen <abcd@gentoo.org>
+  ggz-client-libs-0.0.14.1.ebuild:
+  Keyword ~amd64-linux/~x86-linux
 
   28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
   ggz-client-libs-0.0.14.1.ebuild:
